replaced the broder line with a hr fixed the login and sign up button alignment

--- a/styles/Button.module.css
+++ b/styles/Button.module.css
@@ -1,8 +1,9 @@
 .btn_black{
     width: 110px;
-    height: 35px;
+    height: 50px;
     background-color: #343A40;
     color: white;
+    border:black ;
 }
 .btn_black:hover{
     background-color: #343A40;
@@ -11,9 +12,10 @@
 }
 .btn_white{
     width: 110px;
-    height: 35px;
+    height: 50px;
     background: white;
     color: black;
+    border:white ;
 }
 .neumorphism{
     border-radius: 27px;
