--- a/styles/navBar.module.css
+++ b/styles/navBar.module.css
@@ -11,10 +11,13 @@
     border-bottom-color: #61677A;
     border-bottom-style: solid;
     border-width: thin;
+    width: 90%;
+
+
 }
 .div_button{
     height: fit-content;
-    padding: 5px;
+    padding: 10px;
     background-color: white;
 }
 
